--- a/src/main/resources/static/templates/groupBox.html
+++ b/src/main/resources/static/templates/groupBox.html
@@ -1,6 +1,6 @@
-<ul style="max-width: 320px;">
-    <li ng-repeat="group in groups2 track by $index" style=" display: inline; border: 1px solid #000; margin: 8px">
-        <span ng-if="group.number" ng-click="delete(group.id)">{{group.label}}</span>
-        <span ng-if="!group.number" style="color: red" ng-click="delete(group.id)">{{group.label}}</span>
+<ul style="max-width: 320px; max-height: 80px; overflow: auto">
+    <li ng-repeat="group in groups2 track by $index" style=" display: inline-block; border: 1px solid #000; margin: 3px; padding: 2px">
+        <span ng-if="group.number" ng-click="delete(group.id)" style="padding: 2px; margin: 3px;">{{group.label}}</span>
+        <span ng-if="!group.number" style="color: red" ng-click="delete(group.id)" style="padding: 2px; margin: 3px;">{{group.label}}</span>
     </li>
 </ul>
