TFS-239 login fixed bag TFS-95

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -57,7 +57,7 @@
                     </script>
                 </td>
             </tr>
-            <tr  class="divLine" id="message" ng-show="postResultMessage">
+            <tr  class="divLine" id="message" ng-show="errorShow">
                 <td colspan="2"><label class="errorMessage" style="text-align: center">{{postResultMessage}}</label></td>
             </tr>
             <tr class="divLine">
