TFS-240 classroom input fixed bag TFS-90

--- a/src/main/resources/static/templates/updateLessonForm.html
+++ b/src/main/resources/static/templates/updateLessonForm.html
@@ -30,7 +30,7 @@
             </tr>
             <tr ng-if="messageShow">
                 <td colspan="2">
-                    <p style="width: 300px">{{messageInfo}}</p>
+                    <span style="width: 300px">{{messageInfo}}</span>
                 </td>
             </tr>
             <tr>
