--- a/src/main/resources/static/templates/parser.html
+++ b/src/main/resources/static/templates/parser.html
@@ -13,7 +13,13 @@
         </tr>
         <trt>
             <td colspan="2" ng-show="messageParserShow" style="text-align: center">
-                <p style="width: 250px">{{messageParser}}</p>
+                <br>
+                <p style="width: 350px; margin-bottom:0px; margin-top:6px;word-break: break-word; display: block" ng-if="messageParser.info !== ''">{{messageParser.info}}</p>
+                <p style="width: 350px; margin-bottom:0px; margin-top:0px; word-break: break-word; display: block" ng-if="messageParser.prof !== ''">Добавлено {{messageParser.prof}} преподавателей</p>
+                <p style="width: 350px; margin-bottom:0px; margin-top:0px; word-break: break-word; display: block" ng-if="messageParser.room !== ''">Добавлено {{messageParser.room}} аудиторий</p>
+                <p style="width: 350px; margin-bottom:0px; margin-top:0px; word-break: break-word; display: block" ng-if="messageParser.subj !== ''">Добавлено {{messageParser.subj}} предметов</p>
+                <p style="width: 350px; margin-bottom:0px; margin-bottom:10px; word-break: break-word; display: block" ng-if="messageParser.group !== ''">Добавлено {{messageParser.group}} групп</p>
+                <br>
             </td>
         </trt>
     </table>
