--- a/src/main/resources/static/templates/updateLessonForm.html
+++ b/src/main/resources/static/templates/updateLessonForm.html
@@ -30,7 +30,7 @@
             </tr>
             <tr ng-if="messageShow">
                 <td colspan="2">
-                    <span style="width: 300px; word-break: break-word;">{{messageInfo}}</span>
+                    <p style="max-width: 300px; word-break: break-word;">{{messageInfo}}</p>
                 </td>
             </tr>
             <tr>
