TFS-243 stable for testing

--- a/src/main/resources/static/templates/parser.html
+++ b/src/main/resources/static/templates/parser.html
@@ -18,7 +18,7 @@
                 <p style="width: 350px; margin-bottom:0px; margin-top:0px; word-break: break-word; display: block" ng-if="messageParser.prof !== ''">Добавлено {{messageParser.prof}} преподавателей</p>
                 <p style="width: 350px; margin-bottom:0px; margin-top:0px; word-break: break-word; display: block" ng-if="messageParser.room !== ''">Добавлено {{messageParser.room}} аудиторий</p>
                 <p style="width: 350px; margin-bottom:0px; margin-top:0px; word-break: break-word; display: block" ng-if="messageParser.subj !== ''">Добавлено {{messageParser.subj}} предметов</p>
-                <p style="width: 350px; margin-bottom:0px; margin-bottom:10px; word-break: break-word; display: block" ng-if="messageParser.group !== ''">Добавлено {{messageParser.group}} групп</p>
+                <p style="width: 350px; margin-top:0px; margin-bottom:10px; word-break: break-word; display: block" ng-if="messageParser.group !== ''">Добавлено {{messageParser.group}} групп</p>
                 <br>
             </td>
         </trt>
